scrollbar fix control

--- a/src/styles/components/dropdowns/_columnFilterDropdown.scss
+++ b/src/styles/components/dropdowns/_columnFilterDropdown.scss
@@ -8,7 +8,6 @@
                 border-radius: 16px;
                 border: none;
                 box-shadow: 15px 20px 40px rgba(0, 0, 0, 0.2);
-                z-index: 999999 !important;
 
                 &::before {
                     content: "";
